# googlewrapper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: Google Search Console.md  Pagespeed Insights.md  Reports.md
documentation/: Gmail.md  Google Analytics.md  Google Authentication.md  Google Big Query.md  Google Calendar.md  Google Docs.md  Google Search Console.md  Google Sheets.md  VirtualEnv.md
examples/: ga_gsc_weekly_report.py  gsc_custom_ctr.py  gsc_last_month_compare.py  gsc_one_day.py
src/googlewrapper/: __init__.py  cal.py  connect.py  docs.py  ga.py  gbq.py  gmail.py  gsc.py  pagespeed.py  reports.py  sheets.py
tests/: test_gsc.py  test_sheets.py
