[metadata]
name = googlewrapper
version = 0.2.11
description = Simple API wrapper for Google Products
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jaceiverson/googlewrapper
project_urls = 
    Bug Tracker = https://github.com/jaceiverson/googlewrapper/issues
author = Jace Iverson
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
keywords = google, api, wrapper, search console, analytics, big query, sheets, docs, pagespeed, gmail, calendar, gsc, ga, gbq, report

[options]
package_dir = 
    =src
packages =
    googlewrapper
install_requires =
    google-api-python-client==2.4.0
    oauth2client==4.1.3
    pandas==1.4.4
    pygsheets==2.0.5
    google-cloud-bigquery==3.3.0
    pandas-gbq==0.17.8
    pdcompare==0.1.5
python_requires = >=3.9
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
googlewrapper = py.typed

[flake8]
max-line-length = 160
exclude = src/googlewrapper/__init__.py